// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailObject test doesn't print any alert message 1`] = `
<div>
  <div>
    <strong
      className="text-capitalize"
    >
      nodejs
    </strong>
    <ul
      className="details"
    >
      <li
        key="key_sssssssss_k0"
      >
        <div>
          <strong
            className="text-capitalize"
          >
            destination
          </strong>
          <ul
            className="details"
          >
            <li
              key="key_sssssssss_k0"
            >
              <div
                className="label-collection"
              >
                <span>
                  <span
                    className="text-capitalize"
                  >
                    [host]
                  </span>
                   
                  reviews
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k1"
            >
              <div
                className="label-collection"
              >
                <span>
                  <span
                    className="text-capitalize"
                  >
                    [subset]
                  </span>
                   
                  v1
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k2"
            >
              <div>
                <strong
                  className="text-capitalize"
                >
                  port
                </strong>
                <ul
                  className="details"
                >
                  <li
                    key="key_sssssssss_k0"
                  >
                    <div
                      className="label-collection"
                    >
                      <span>
                        <span
                          className="text-capitalize"
                        >
                          [number]
                        </span>
                         
                        22
                      </span>
                    </div>
                  </li>
                  <li
                    key="key_sssssssss_k1"
                  >
                    <div
                      className="label-collection"
                    >
                      <span>
                        <span
                          className="text-capitalize"
                        >
                          [name]
                        </span>
                         
                        ssh
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
      <li
        key="key_sssssssss_k1"
      >
        <div
          className="label-collection"
        >
          <span>
            <span
              className="text-capitalize"
            >
              [weight]
            </span>
             
            85
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DetailObject test doesn't print excluded fields 1`] = `
<div>
  <div>
    <strong
      className="text-capitalize"
    >
      nodejs
    </strong>
    <ul
      className="details"
    >
      <li
        key="key_sssssssss_k0"
      >
        <div>
          <strong
            className="text-capitalize"
          >
            destination
          </strong>
          <ul
            className="details"
          >
            <li
              key="key_sssssssss_k0"
            >
              <div
                className="label-collection"
              >
                <span>
                  <span
                    className="text-capitalize"
                  >
                    [host]
                  </span>
                   
                  reviews
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k1"
            >
              <div
                className="label-collection"
              >
                <span>
                  <span
                    className="text-capitalize"
                  >
                    [subset]
                  </span>
                   
                  v1
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k2"
            />
          </ul>
        </div>
      </li>
      <li
        key="key_sssssssss_k1"
      >
        <div
          className="label-collection"
        >
          <span>
            <span
              className="text-capitalize"
            >
              [weight]
            </span>
             
            85
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DetailObject test prints a nested list with all attributes in the detail 1`] = `
<div>
  <div>
    <strong
      className="text-capitalize"
    >
      nodejs
    </strong>
    <ul
      className="details"
    >
      <li
        key="key_sssssssss_k0"
      >
        <div>
          <strong
            className="text-capitalize"
          >
            destination
          </strong>
          <ul
            className="details"
          >
            <li
              key="key_sssssssss_k0"
            >
              <div
                className="label-collection"
              >
                <span>
                  <span
                    className="text-capitalize"
                  >
                    [host]
                  </span>
                   
                  reviews
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k1"
            >
              <div
                className="label-collection"
              >
                <span>
                  <span
                    className="text-capitalize"
                  >
                    [subset]
                  </span>
                   
                  v1
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k2"
            >
              <div>
                <strong
                  className="text-capitalize"
                >
                  port
                </strong>
                <ul
                  className="details"
                >
                  <li
                    key="key_sssssssss_k0"
                  >
                    <div
                      className="label-collection"
                    >
                      <span>
                        <span
                          className="text-capitalize"
                        >
                          [number]
                        </span>
                         
                        22
                      </span>
                    </div>
                  </li>
                  <li
                    key="key_sssssssss_k1"
                  >
                    <div
                      className="label-collection"
                    >
                      <span>
                        <span
                          className="text-capitalize"
                        >
                          [name]
                        </span>
                         
                        ssh
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
      <li
        key="key_sssssssss_k1"
      >
        <div
          className="label-collection"
        >
          <span>
            <span
              className="text-capitalize"
            >
              [weight]
            </span>
             
            85
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DetailObject test prints an alert message 1`] = `
<div>
  <div>
    <strong
      className="text-capitalize"
    >
      nodejs
    </strong>
    <div>
      <p
        style={
          Object {
            "color": "#470000",
          }
        }
      >
        <Icon
          name="error-circle-o"
          type="pf"
        />
         
        Not all checks passed
      </p>
    </div>
    <ul
      className="details"
    >
      <li
        key="key_sssssssss_k0"
      >
        <div>
          <strong
            className="text-capitalize"
          >
            destination
          </strong>
          <ul
            className="details"
          >
            <li
              key="key_sssssssss_k0"
            >
              <div
                className="label-collection"
              >
                <span>
                  <span
                    className="text-capitalize"
                  >
                    [host]
                  </span>
                   
                  reviews
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k1"
            >
              <div
                className="label-collection"
              >
                <span>
                  <span
                    className="text-capitalize"
                  >
                    [subset]
                  </span>
                   
                  v1
                </span>
              </div>
            </li>
            <li
              key="key_sssssssss_k2"
            >
              <div>
                <strong
                  className="text-capitalize"
                >
                  port
                </strong>
                <ul
                  className="details"
                >
                  <li
                    key="key_sssssssss_k0"
                  >
                    <div
                      className="label-collection"
                    >
                      <span>
                        <span
                          className="text-capitalize"
                        >
                          [number]
                        </span>
                         
                        22
                      </span>
                    </div>
                  </li>
                  <li
                    key="key_sssssssss_k1"
                  >
                    <div
                      className="label-collection"
                    >
                      <span>
                        <span
                          className="text-capitalize"
                        >
                          [name]
                        </span>
                         
                        ssh
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
      <li
        key="key_sssssssss_k1"
      >
        <div
          className="label-collection"
        >
          <span>
            <span
              className="text-capitalize"
            >
              [weight]
            </span>
             
            85
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
